--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,33 +1,166 @@
-<div id="home">
-  <div class="container">
+  <section id="title">
+<div class="container-fluid"></div>
+
+    <!-- Nav Bar -->
+
+    <nav class="navbar navbar-expand-lg navbar-dark">
+    
+        <a class="navbar-brand" href="">Dude, Wheres My Dog?</a>
+        
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
+             <span class="navbar-toggler-icon"></span>
+         </button>
+         
+         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+             
+             <ul class="navbar-nav ml-auto">
+                 <li class="nav-item">
+                     <a class="nav-link" href="">Contact</a>
+                 </li>
+                 <li class="nav-item">
+                     <a class="nav-link" href="">Report</a>
+                 </li>
+                 <li class="nav-item">
+                     <a class="nav-link" href=""> Sign In</a>
+                 </li>
+             </ul>
+             
+         </div>
+         
+        </div>
+     </nav>
+
+<br>
+<br>
+    <!-- Title -->
+
     <div class="row">
-      <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2>
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="example-text">Example Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
-          </div>
-          <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
-          </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
-        <h3>Examples:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
-          </li>
-          {{/each}}
-        </ul>
-      </div>
+
+        <div class="col-lg-6">
+      <h1> Find your lost dog/cat and reunite with them now!</h1>
+      <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
+      <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
     </div>
-  </div>
+
+        <div class="hurt col-lg-6">
+      <img src="../public/styles/images/find dog.jpeg" alt="fnd my dog">
+    </div>
+
+    </div>
+
+  </section>
+
+
+  <!-- Features -->
+
+  <section id="features">
+     
+    <div class="row">
+    <div class="feature-box col-lg-4">
+          <center><i class="icon fas fa-check fa-4x"></i></center>
+            <h3>Easy to use.</h3>
+    <p class="white">So easy to use, even your dog could do it.</p>
 </div>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+<div class="feature-box col-lg-4">
+        <center> <i class="icon far fa-dot-circle fa-4x"></i></center>
+        <h3>Locate</h3>
+    <p class="white">Neque porro quisquam est qui dolorem</p>
+</div>
+
+<div class="feature-box col-lg-4">
+        <center> <i class="icon fas fa-heart fa-4x"></i></center>
+        <h3>Reunite.</h3>
+     <p class="white">Neque porro quisquam est qui dolorem</p>
+</div>
+
+</div>
+  </section>
+
+
+  <!-- Lost Animal Form -->
+
+  <section id="testimonials">
+
+    <div class="container">
+        <h2>Lost Animal Form</h2>
+        <form class="form-horizontal" action="/action_page.php">
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="email">Email:</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="pwd">Species:</label>
+            <div class="col-sm-10">          
+              <input type="password" class="form-control" id="pwd" placeholder="Enter species" name="pwd">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="email">Breed:</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="email" placeholder="Enter breed" name="email">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="pwd">Color:</label>
+            <div class="col-sm-10">          
+              <input type="password" class="form-control" id="pwd" placeholder="Enter color" name="pwd">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="email">Description:</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="email" placeholder="Enter description" name="email">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="pwd">Lost At:</label>
+            <div class="col-sm-10">          
+              <input type="password" class="form-control" id="pwd" placeholder="Enter lost at" name="pwd">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="email">Lost Where:</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="email" placeholder="lost where" name="email">
+            </div>
+          </div>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="inputGroupFileAddon01">Picture</span>
+            </div>
+            <div class="custom-file">
+              <input type="file" class="custom-file-input" id="inputGroupFile01"
+                aria-describedby="inputGroupFileAddon01">
+              <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+            </div>
+          </div>
+          <div class="form-group">        
+            <div class="col-sm-offset-2 col-sm-10">
+              <div class="checkbox">
+                <label><input type="checkbox" name="remember"> Remember me</label>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">        
+            <div class="col-sm-offset-2 col-sm-10">
+              <button type="submit" class="btn btn-danger">Submit</button>
+            </div>
+          </div>
+        </form>
+      </div>
+
+  </section>
+
+  
+
+  <!-- Footer -->
+
+  <footer id="footer">
+
+    <p>© Copyright 2019 Dude, Wheres My Dog?</p>
+
+  </footer>
+
