--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,86 +1,72 @@
-  <section id="title">
-<div class="container-fluid1"></div>
-
-    <!-- Nav Bar -->
-
-    <nav class="navbar navbar-expand-lg navbar-dark">
-    
+<div class="container-fluid1" id="title">
+  <div class="row">
+    <div class="col-md-12">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="">Dude, Wheres My Dog?</a>
-        
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
-             <span class="navbar-toggler-icon"></span>
-         </button>
-         
-         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-             
-             <ul class="navbar-nav ml-auto">
-                 <li class="nav-item">
-                     <a class="nav-link" href="">Contact</a>
-                 </li>
-                 <li class="nav-item">
-                     <a class="nav-link" href="">Report</a>
-                 </li>
-                 <li class="nav-item">
-                     <a class="nav-link" href=""> Sign In</a>
-                 </li>
-             </ul>
-             
-         </div>
-         
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Report</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href=""> Sign In</a>
+            </li>
+          </ul>
         </div>
-     </nav>
-
-<br>
-<br>
-    <!-- Title -->
-
-    <div class="row">
-
-        <div class="col-lg-6">
+      </nav>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-6">
       <h1> Find your lost dog/cat and reunite with them now!</h1>
       <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
-      <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
+      <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-google-play"></i>Download</button>
+    </div>
+    <div class="col-lg-6">
+      <div class="hurt col-lg-6">
+        <img src="/styles/images/find dog.jpeg" alt="fnd my dog">
+      </div>
     </div>
 
-        <div class="hurt col-lg-6">
-      <img src="/styles/images/find dog.jpeg" alt="fnd my dog">
-    </div>
-
-    </div>
-
-  </section>
+  </div>
+</div>
 
 
-  <!-- Features -->
+<!-- Features -->
 
-  <section id="features">
-     
-    <div class="row">
+<section id="features">
+
+  <div class="row">
     <div class="feature-box col-lg-4">
-          <center><i class="icon fas fa-check fa-4x"></i></center>
-            <h3>Easy to use.</h3>
-    <p class="white">So easy to use, even your dog could do it.</p>
-</div>
+      <center><i class="icon fas fa-check fa-4x"></i></center>
+      <h3>Easy to use.</h3>
+      <p class="white">So easy to use, even your dog could do it.</p>
+    </div>
 
-<div class="feature-box col-lg-4">
-        <center> <i class="icon far fa-dot-circle fa-4x"></i></center>
-        <h3>Locate</h3>
-    <p class="white">Neque porro quisquam est qui dolorem</p>
-</div>
+    <div class="feature-box col-lg-4">
+      <center> <i class="icon far fa-dot-circle fa-4x"></i></center>
+      <h3>Locate</h3>
+      <p class="white">Neque porro quisquam est qui dolorem</p>
+    </div>
 
-<div class="feature-box col-lg-4">
-        <center> <i class="icon fas fa-heart fa-4x"></i></center>
-        <h3>Reunite.</h3>
-     <p class="white">Neque porro quisquam est qui dolorem</p>
-</div>
+    <div class="feature-box col-lg-4">
+      <center> <i class="icon fas fa-heart fa-4x"></i></center>
+      <h3>Reunite.</h3>
+      <p class="white">Neque porro quisquam est qui dolorem</p>
+    </div>
 
-</div>
-  </section>
-  <!-- Footer -->
+  </div>
+</section>
+<!-- Footer -->
 
-  <footer id="footer">
+<footer id="footer">
 
-    <p>© Copyright 2019 Dude, Wheres My Dog?</p>
+  <p>© Copyright 2019 Dude, Wheres My Dog?</p>
 
-  </footer>
-
+</footer>
