--- a/views/foundForm.handlebars
+++ b/views/foundForm.handlebars
@@ -1,29 +1,40 @@
 <div class="container-fluid top">
-    <div class="row">
-        <div class="col-md-2">
-            <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="/">Dude, Wheres My Dog?</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </nav>
-        </div>
-        <div class="col-md-2 offset-md-1">
-          <a href="/WhatWeDo"><h1 class="topnav">What We Do!</h1></a>
-        </div>
-        <div class="col-md-2">
-          <a href="/Report"><h1 class="topnav">Report a Lost Animal</h1></a>
-        </div>
-        <div class="col-md-2">
-          <a href="/Rescued"><h1 class="topnav">Our Results!</h1></a>
-        </div>
-        <div class="col-md-1 offset-md-1">
-                <a class="nav-link link" href="">Contact</a>
-        </div>
-        <div class="col-md-1">
-              <a class="nav-link link" href=""> Sign In</a>
-        </div>
+  <div class="row">
+    <div class="col-md-2">
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="/">Dude, Wheres My Dog?</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </nav>
     </div>
+    <div class="col-md-2">
+      <a href="/WhatWeDo">
+        <h1 class="topnav">What We Do!</h1>
+      </a>
+    </div>
+    <div class="col-md-2">
+      <a href="/SearchList">
+        <h1 class="topnav">Search Our Animals</h1>
+      </a>
+    </div>
+    <div class="col-md-2">
+      <a href="/Report">
+        <h1 class="topnav">Report a Lost Animal</h1>
+      </a>
+    </div>
+    <div class="col-md-2">
+      <a href="/Rescued">
+        <h1 class="topnav">Our Results!</h1>
+      </a>
+    </div>
+    <div class="col-md-1">
+      <a class="nav-link link" href="">Contact</a>
+    </div>
+    <div class="col-md-1">
+      <a class="nav-link link" href=""> Sign In</a>
+    </div>
+  </div>
 </div>
 <!-- Found Animal Form -->
 
