--- a/views/foundresults.handlebars
+++ b/views/foundresults.handlebars
@@ -8,9 +8,14 @@
         </button>
       </nav>
     </div>
-    <div class="col-md-2 offset-md-1">
+    <div class="col-md-2">
       <a href="/WhatWeDo">
         <h1 class="topnav">What We Do!</h1>
+      </a>
+    </div>
+    <div class="col-md-2">
+      <a href="/SearchList">
+        <h1 class="topnav">Search Our Animals</h1>
       </a>
     </div>
     <div class="col-md-2">
@@ -23,7 +28,7 @@
         <h1 class="topnav">Our Results!</h1>
       </a>
     </div>
-    <div class="col-md-1 offset-md-1">
+    <div class="col-md-1">
       <a class="nav-link link" href="">Contact</a>
     </div>
     <div class="col-md-1">
@@ -34,8 +39,62 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-6">
-      <h1>Hello</h1>
+    <div class="col-md-6 align">
+      <form class="form-horizontal resultsPage resultsForm" method="GET" action="/Found_Animals/results">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h1>Filter Your Search</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <label class="control-label lostLabel col-sm-12">Animal Name:</label>
+            <div class="col-sm-12">
+              <input type="text" class="form-control inputDesign" placeholder="Enter Name" name="name">
+            </div>
+          </div>
+          <div class="col-md-6">
+            <label class="control-label lostLabel col-sm-12">Species:</label>
+            <div class="col-sm-12">
+              <input type="text" class="form-control inputDesign" placeholder="Enter Species" name="species">
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <label class="control-label lostLabel col-sm-12">Breed:</label>
+            <div class="col-sm-12">
+              <input type="text" class="form-control inputDesign" placeholder="Enter breed" name="breed">
+            </div>
+          </div>
+          <div class="col-md-6">
+            <label class="control-label lostLabel col-sm-12">Color:</label>
+            <div class="col-sm-12">
+              <input type="text" class="form-control inputDesign" placeholder="Enter color" name="color">
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <label class="control-label lostLabel col-sm-12">Zip Code</label>
+            <div class="col-sm-12">
+              <input type="text" class="form-control inputDesign zippy" placeholder="Zip Code" name="zip">
+            </div>
+          </div>
+          <div class="col-md-6">
+            <label class="control-label lostLabel col-sm-12">Found Where</label>
+            <div class="col-sm-12">
+              <input type="text" class="form-control inputDesign" placeholder="lost where" name="where">
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-3 offset-md-9">
+            <button type="submit" class="btn btn-danger submit">Submit</button>
+          </div>
+        </div>
+      </form>
     </div>
     <div class="col-md-6 text-center main">
       <ul>
