last style changes before going back to query. Also reverted Zipcode datatype value

--- a/views/lostresults.handlebars
+++ b/views/lostresults.handlebars
@@ -48,42 +48,42 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <label class="control-label lostLabel col-sm-12">Animal Name:</label>
-            <div class="col-sm-12">
+            <label class="control-label lostLabel col-md-12">Animal Name:</label>
+            <div class="col-md-12">
               <input type="text" class="form-control inputDesign" placeholder="Enter Name" name="name">
             </div>
           </div>
           <div class="col-md-6">
-            <label class="control-label lostLabel col-sm-12">Species:</label>
-            <div class="col-sm-12">
+            <label class="control-label lostLabel col-md-12">Species:</label>
+            <div class="col-md-12">
               <input type="text" class="form-control inputDesign" placeholder="Enter Species" name="species">
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
-            <label class="control-label lostLabel col-sm-12">Breed:</label>
-            <div class="col-sm-12">
+            <label class="control-label lostLabel col-md-12">Breed:</label>
+            <div class="col-md-12">
               <input type="text" class="form-control inputDesign" placeholder="Enter breed" name="breed">
             </div>
           </div>
           <div class="col-md-6">
-            <label class="control-label lostLabel col-sm-12">Color:</label>
-            <div class="col-sm-12">
+            <label class="control-label lostLabel col-md-12">Color:</label>
+            <div class="col-md-12">
               <input type="text" class="form-control inputDesign" placeholder="Enter color" name="color">
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
-            <label class="control-label lostLabel col-sm-12">Zip Code</label>
-            <div class="col-sm-12">
+            <label class="control-label lostLabel col-md-12">Zip Code</label>
+            <div class="col-md-12">
               <input type="text" class="form-control inputDesign" placeholder="Zip Code" name="zip">
             </div>
           </div>
           <div class="col-md-6">
-            <label class="control-label lostLabel col-sm-12">Lost Where</label>
-            <div class="col-sm-12">
+            <label class="control-label lostLabel col-md-12">Lost Where</label>
+            <div class="col-md-12">
               <input type="text" class="form-control inputDesign" placeholder="lost where" name="where">
             </div>
           </div>
