fixed singular parameter query on results page

--- a/views/lostresults.handlebars
+++ b/views/lostresults.handlebars
@@ -78,7 +78,7 @@
           <div class="col-md-6">
             <label class="control-label lostLabel col-md-12">Zip Code</label>
             <div class="col-md-12">
-              <input type="text" class="form-control inputDesign" placeholder="Zip Code" name="zip">
+              <input type="text" class="form-control inputDesign" placeholder="Zip Code" name="zipC">
             </div>
           </div>
           <div class="col-md-6">
