--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,8 +1,64 @@
-<div class="container">
-  <div class="jumbotron mt-4">
-    <h1 class="display-4 text-center">404 Not Found
-      <span role="img" aria-label="Face with rolling eyes">🙄</span>
-    </h1>
-    <a href="/">← Back To Home</a>
+<div class="container-fluid top">
+    <div class="row">
+        <div class="col-md-2">
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <a class="navbar-brand" href="/">Dude, Wheres My Dog?</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </nav>
+        </div>
+        <div class="col-md-2 offset-md-1">
+            <a href="/WhatWeDo">
+                <h1 class="topnav">What We Do!</h1>
+            </a>
+        </div>
+        <div class="col-md-2">
+            <a href="/Report">
+                <h1 class="topnav">Report a Lost Animal</h1>
+            </a>
+        </div>
+        <div class="col-md-2">
+            <a href="/Rescued">
+                <h1 class="topnav">Our Results!</h1>
+            </a>
+        </div>
+        <div class="col-md-1 offset-md-1">
+            <a class="nav-link link" href="">Contact</a>
+        </div>
+        <div class="col-md-1">
+            <a class="nav-link link" href=""> Sign In</a>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-3">
+      <!--Padding-->
+    </div>
+    <div class="col-md-6 text-center">
+      <div class="error">
+        <h1 class="errortext">404 Error</h1>
+        <h1 class="errortext">We couldn't find the page you were looking for</h1>
+        <h1 class="errortext"><a href="/">Back to the Homepage</a></h1>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <!--Padding-->
+    </div>
   </div>
+</div>
+
+<div class="container-fluid bottom404">
+    <div class="row">
+        <div class="col-md-6 text-right">
+            <footer id="footer">
+                <p>© Copyright 2019 Dude, Wheres My Dog?</p>
+            </footer>
+        </div>
+        <div class="col-md-6 text-left">
+            <a href="https://github.com/mjjohnston55/Project2" id="repoLink">Github Repository</a>
+        </div>
+    </div>
 </div>
