--- a/views/WhatWeDo.handlebars
+++ b/views/WhatWeDo.handlebars
@@ -41,27 +41,27 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 catWhat">
                     <div class="row">
                         <div class="col-md-12">
-                            <h5>Found a Pet?</h5>
+                            <h1 class="foundPet">Found a Pet?</h1>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <a href="/foundForm">Report Found Pet</a>
+                            <a href="/foundForm" class="foundPetLink">Report Found Pet</a>
                         </div>
                     </div>
                 </div>
-                 <div class="col-md-6">
+                 <div class="col-md-6 dogWhat">
                     <div class="row">
                         <div class="col-md-12">
-                            <h5>Lost a Pet?</h5>
+                            <h1 class="foundPet">Lost a Pet?</h1>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <a href="/lostForm">Report Lost Pet</a>
+                            <a href="/lostForm" class="foundPetLink">Report Lost Pet</a>
                         </div>
                     </div>
                 </div>
